--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "homepage": "https://github.com/janehtle/lrnr#readme",
   "dependencies": {
     "concurrently": "^9.2.1",
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "react-router-dom": "^7.10.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.28.5",
